<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="third_fragment_label">Third Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="username">Username:</string>
    <string name="password">Password:</string>

    <string name="hello_first_fragment">Fieldbuzz Application</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="applicantInformation">Applicant Information</string>
    <string name="name">Name*</string>
    <string name="email">Email Address*</string>
    <string name="phone">Phone no.*</string>
    <string name="full_address">Full Address (optional)</string>
    <string name="name_of_university">Name of University*</string>
    <string name="graduation_year">Graduation Year(2015-2020)*</string>
    <string name="cgpa">CGPA (optional)</string>
    <string name="experience_in_month">Experience in month (optional)</string>
    <string name="current_work_place_name">Current work place name (optional)</string>
    <string name="applying_in">Applying in*</string>
    <string name="expected_salary">expected_salary*</string>
    <string name="field_buzz_reference">field_buzz_reference(Optional)</string>
    <string name="github_project_url">github_project_url*</string>
    <string name="cv_file">Attch CV File (Must be PDF format)</string>
    <string name="no_file_chosen">No file chosen</string>

    <string name="server_response">Server Response:</string>
    <string name="empty">nothing</string>

</resources>