<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="-184dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <TextView
                android:id="@+id/textView_token"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="136dp"
                android:layout_marginLeft="136dp"
                android:layout_marginTop="36dp"
                android:text="@string/applicantInformation"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_chooseFile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Choose"
                app:layout_constraintStart_toStartOf="@+id/textView14"
                app:layout_constraintTop_toBottomOf="@+id/textView14" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_token" />

            <EditText
                android:id="@+id/fieldName"
                android:layout_width="@dimen/inputWidth"
                android:layout_height="@dimen/inputHeight"
                android:inputType="text"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <EditText
                android:id="@+id/fieldEmail"
                android:layout_width="@dimen/inputWidth"
                android:layout_height="@dimen/inputHeight"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                app:layout_constraintStart_toStartOf="@+id/fieldName"
                app:layout_constraintTop_toBottomOf="@+id/fieldName" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                app:layout_constraintStart_toStartOf="@+id/fieldEmail"
                app:layout_constraintTop_toBottomOf="@+id/fieldEmail" />

            <EditText
                android:id="@+id/fieldPhone"
                android:layout_width="@dimen/inputWidth"
                android:layout_height="wrap_content"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_address"
                app:layout_constraintStart_toStartOf="@+id/fieldPhone"
                app:layout_constraintTop_toBottomOf="@+id/fieldPhone" />

            <EditText
                android:id="@+id/fieldFullAddress"
                android:layout_width="@dimen/inputWidth"
                android:layout_height="wrap_content"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/name_of_university"
                app:layout_constraintStart_toStartOf="@+id/fieldFullAddress"
                app:layout_constraintTop_toBottomOf="@+id/fieldFullAddress" />

            <EditText
                android:id="@+id/fieldUniversity"
                android:layout_width="@dimen/inputWidth"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textGradYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/graduation_year"
                app:layout_constraintStart_toStartOf="@+id/fieldUniversity"
                app:layout_constraintTop_toBottomOf="@+id/fieldUniversity" />


            <TextView
                android:id="@+id/textView7"
                android:layout_width="@dimen/inputWidth"
                android:layout_height="wrap_content"
                android:text="@string/cgpa"
                app:layout_constraintStart_toStartOf="@+id/fieldGraduation"
                app:layout_constraintTop_toBottomOf="@+id/fieldGraduation" />

            <EditText
                android:id="@+id/fieldCgpa"
                android:layout_width="@dimen/inputWidth"
                android:layout_height="wrap_content"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                app:layout_constraintStart_toStartOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/experience_in_month"
                app:layout_constraintStart_toStartOf="@+id/fieldCgpa"
                app:layout_constraintTop_toBottomOf="@+id/fieldCgpa" />

            <EditText
                android:id="@+id/fieldExperience"
                android:layout_width="@dimen/inputWidth"
                android:layout_height="wrap_content"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                app:layout_constraintStart_toStartOf="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_work_place_name"
                app:layout_constraintStart_toStartOf="@+id/fieldExperience"
                app:layout_constraintTop_toBottomOf="@+id/fieldExperience" />

            <EditText
                android:id="@+id/fieldCurrentWorkplace"
                android:layout_width="@dimen/inputWidth"
                android:layout_height="wrap_content"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                app:layout_constraintStart_toStartOf="@+id/textView9"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <TextView
                android:id="@+id/textApplying"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/applying_in"
                app:layout_constraintStart_toStartOf="@+id/fieldCurrentWorkplace"
                app:layout_constraintTop_toBottomOf="@+id/fieldCurrentWorkplace" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expected_salary"
                app:layout_constraintStart_toStartOf="@+id/fieldApplying"
                app:layout_constraintTop_toBottomOf="@+id/fieldApplying" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/field_buzz_reference"
                app:layout_constraintStart_toStartOf="@+id/fieldSalary"
                app:layout_constraintTop_toBottomOf="@+id/fieldSalary" />

            <TextView
                android:id="@+id/textGithub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/github_project_url"
                app:layout_constraintStart_toStartOf="@+id/fieldReference"
                app:layout_constraintTop_toBottomOf="@+id/fieldReference" />

            <RadioGroup
                android:id="@+id/fieldApplying"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="@+id/textApplying"
                app:layout_constraintTop_toBottomOf="@+id/textApplying">

                <RadioButton
                    android:id="@+id/radio1"
                    android:layout_width="141dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="Mobile" />

                <RadioButton
                    android:id="@+id/radio2"
                    android:layout_width="128dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Backend" />
            </RadioGroup>

            <EditText
                android:id="@+id/fieldSalary"
                android:layout_width="@dimen/inputWidth"
                android:layout_height="@dimen/inputHeight"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                app:layout_constraintStart_toStartOf="@+id/textView11"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

            <EditText
                android:id="@+id/fieldReference"
                android:layout_width="@dimen/inputWidth"
                android:layout_height="@dimen/inputHeight"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                app:layout_constraintStart_toStartOf="@+id/textView12"
                app:layout_constraintTop_toBottomOf="@+id/textView12" />

            <EditText
                android:id="@+id/fieldGithub"
                android:layout_width="@dimen/inputWidth"
                android:layout_height="@dimen/inputHeight"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                app:layout_constraintStart_toStartOf="@+id/textGithub"
                app:layout_constraintTop_toBottomOf="@+id/textGithub" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/cv_file"
                app:layout_constraintStart_toStartOf="@+id/fieldGithub"
                app:layout_constraintTop_toBottomOf="@+id/fieldGithub" />

            <Button
                android:id="@+id/button_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="156dp"
                android:layout_marginLeft="156dp"
                android:layout_marginTop="8dp"
                android:text="Submit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_chooseFile" />

            <EditText
                android:id="@+id/fieldGraduation"
                android:layout_width="@dimen/inputWidth"
                android:layout_height="@dimen/inputHeight"
                android:inputType="number"
                app:layout_constraintStart_toStartOf="@+id/textGradYear"
                app:layout_constraintTop_toBottomOf="@+id/textGradYear" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>